force-app/main/default/objects/SBQQ__Dimension__c/fields/Dimension_Type__c.field-meta.xml
<CustomField>
    <fullName>Dimension_Type__c</fullName>
    <label>Dimension Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SBQQ__Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MRC</fullName>
            </value>
            <value>
                <fullName>VRC</fullName>
            </value>
            <value>
                <fullName>OTC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>