force-app/main/default/objects/SBQQ__Dimension__c/fields/Distributor_Price__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Price__c</fullName>
    <label>Distributor Price</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>