force-app/main/default/objects/SBQQ__Dimension__c/fields/Internal_Cost_Price__c.field-meta.xml
<CustomField>
    <fullName>Internal_Cost_Price__c</fullName>
    <label>Internal Cost Price</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>