force-app/main/default/objects/SBQQ__Dimension__c/fields/Partner_Price__c.field-meta.xml
<CustomField>
    <fullName>Partner_Price__c</fullName>
    <label>Partner Price</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>