force-app/main/default/objects/SBQQ__Dimension__c/fields/Sales_Head_Price__c.field-meta.xml
<CustomField>
    <fullName>Sales_Head_Price__c</fullName>
    <label>Sales Head Price</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>