force-app/main/default/objects/SBQQ__Dimension__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SBQQ__Product__c</columns>
    <columns>Cost__c</columns>
    <columns>Internal_Cost_Price__c</columns>
    <columns>Sales_Price__c</columns>
    <columns>Sales_Head_Price__c</columns>
    <columns>Product_Head_Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>