force-app/main/default/objects/SBQQ__Dimension__c/listViews/All_Price_Dimensions.listView-meta.xml
<ListView>
    <fullName>All_Price_Dimensions</fullName>
    <columns>NAME</columns>
    <columns>SBQQ__Product__c</columns>
    <columns>Dimension_Type__c</columns>
    <columns>Cost__c</columns>
    <columns>Internal_Cost_Price__c</columns>
    <columns>Product_Head_Price__c</columns>
    <columns>Sales_Head_Price__c</columns>
    <columns>Partner_Price__c</columns>
    <columns>Sales_Price__c</columns>
    <columns>SBQQ__UnitPrice__c</columns>
    <filterScope>Mine</filterScope>
    <label>All Price Dimensions</label>
</ListView>